Updated index.html for immediate redirection

--- a/index.html
+++ b/index.html
@@ -3,37 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting to Discord</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/typography.css">
+    <meta http-equiv="refresh" content="0;url=https://discord.gg/kYh6zAfbqm">
+    <title>Redirecting...</title>
 </head>
 <body>
-    <!-- Load Header Component -->
-    <div id="header-container">
-        <!-- Header with logo -->
-        <nav class="navbar">
-            <div class="logo">
-                <img src="assets/images/logo.png" alt="Logo" class="logo-img">
-            </div>
-            <div class="title">LXP Community</div>
-        </nav>
-    </div>
-
-    <div class="loading-container">
-        <div class="loading">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <p class="loading-text">Redirecting to Discord...</p>
-    </div>
-
-    <!-- Load Footer Component -->
-    <div id="footer-container"></div>
-
-    <script src="js/main.js"></script>
-    <script src="js/redirect.js"></script>
+    <!-- Strona przekierowująca do Discord -->
+    <p>If you are not redirected, <a href="https://discord.gg/kYh6zAfbqm">click here</a>.</p>
 </body>
 </html>
