--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=https://discord.gg/kYh6zAfbqm">
     <title>Redirecting...</title>
+    <script src="redirect.js" defer></script>
 </head>
 <body>
-    <!-- Strona przekierowująca do Discord -->
     <p>If you are not redirected, <a href="https://discord.gg/kYh6zAfbqm">click here</a>.</p>
 </body>
 </html>
